# user-tasks

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  postman.json  pyproject.toml
app/: settings.py  urls.py
user_task/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
user_task/migrations/: 0001_initial.py
